--- a/run-buddy/css/style.css
+++ b/run-buddy/css/style.css
@@ -44,6 +44,14 @@ header h1 {
     margin: 7px 0;
   }
 
+  header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+  }
+
   header nav ul li {
     display: inline;
   }
@@ -51,7 +59,7 @@ header h1 {
   header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 22px;
+    font-size: 1.55vw;
   }
 
   header h1 {
