--- a/run-buddy/css/style.css
+++ b/run-buddy/css/style.css
@@ -164,18 +164,15 @@ header h1 {
     font-size: 16px;
   }
 
-  .intro {
-    text-align: center;
+  .flex-row {
+    display: flex;
   }
 
   .intro h2 {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
     border-color: #fce138;
-    display: inline-block;
   }
 
   .intro p {
@@ -187,18 +184,29 @@ header h1 {
   }
 
   .steps { 
-    text-align: center;
     background: #fce138;
+  }
+
+  .step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
   }
 
 
   .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
   }
   
   .primary-border {
@@ -210,18 +218,42 @@ header h1 {
   }
 
   .steps div {
-    margin-bottom: 80px;
+    /* margin-bottom: 80px; */
   }
   
-  .steps img {
-    width: 15%;
-    margin: 10px 0;
+  .step-img {
+    /* width: 15%; */
+    /* margin: 10px 0; */
+    flex: 1 12%;
+    margin-right: 20px;
   } 
+
+  .step-img img {
+    max-width: 100%;
+  }
   
-  .steps h3 {
+  .step h3 {
     color: #024e76;
     font-size: 46px;
     margin-top: 10px;
+    flex: 1 30%;
+  }
+
+  .step-info{
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  .step-text {
+    flex: 12;
+  }
+
+  .step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
   }
   
   .steps p {
@@ -235,11 +267,6 @@ header h1 {
 
   .section-title{
     margin: 20px auto 30px;
-    
-  }
-  
-  .trainers {
-    text-align: center;
   }
 
   .trainer {
@@ -287,15 +314,11 @@ header h1 {
 
   .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
-  margin-bottom: 35px;
   color: #024e76;
 }
 
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
