--- a/run-buddy/css/style.css
+++ b/run-buddy/css/style.css
@@ -279,7 +279,7 @@ header h1 {
 
   .trainer {
     /* width: 900px; */
-    margin: 0 auto 20px auto;
+    margin: 10px 20px;
     background: #024e76;
     color: #fce138;
     flex: 1;
@@ -335,8 +335,19 @@ header h1 {
   color: #fce138;
 }
 
+.contact-info{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
+
 .contact-info iframe {
-  width: 400px;
+  /* width: 400px; */
   height: 400px;
 }
 
@@ -348,7 +359,7 @@ header h1 {
 .contact-info p, .contact-info address {
   margin: 20px 0;
   line-height: 1.5;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
 }
 
@@ -357,10 +368,31 @@ header h1 {
 }
 
 .contact-info div {
-  width: 410px;
+  /* width: 410px;
   display: inline-block;
   vertical-align: top;
   text-align: left;
-  margin: 30px 0 0 60px;
+  margin: 30px 0 0 60px; */
   color: white;
+}
+
+.contact-form input, .contact-form textarea{
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button{
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
 }
