--- a/run-buddy/css/style.css
+++ b/run-buddy/css/style.css
@@ -20,12 +20,40 @@ body {
     
 }
 
+/* default state */
+button {
+  background: white;
+}
+
+/* mouse is hovering over button */
+button:hover {
+  background: red;
+}
+
+/* button is in focus because it was the most recently clicked element on the page */
+button:focus {
+  background: green;
+}
+
+/* user is actively pressing the cursor down on the button */
+button:active {
+  background: blue;
+}
+
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
   }
 
 header h1 {
@@ -70,6 +98,22 @@ header h1 {
     display: inline;
   }
 
+  header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
+  
+  .hero-form button:hover {
+    background-color: #39a6b2;  
+  }
+  
+  .contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+  }
+
   footer {
     background: #fce138;
     width: 100%;
@@ -108,6 +152,8 @@ header h1 {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
   }
 
   .hero-cta {
@@ -132,6 +178,8 @@ header h1 {
     width: 40%;
     color: #024e76;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
   }
 
   .hero-form h3 {
@@ -142,6 +190,17 @@ header h1 {
   .hero-form p {
     margin: 5px 0 15px 0;
   }
+
+  /* update existing rule with this declaration */
+.form-input {
+  background-color: rgba(255,255,255, 0.75);
+}
+
+/* create a new rule for focus state */
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
+}
   
   .form-input {
     border: 1px solid #024e76;
@@ -151,6 +210,7 @@ header h1 {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
   }
 
   .hero-form label {
@@ -163,6 +223,7 @@ header h1 {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
   }
 
   .flex-row {
@@ -386,6 +447,7 @@ header h1 {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
 }
 
 .contact-form button{
@@ -396,6 +458,7 @@ header h1 {
   text-align: center;
   padding: 15px 0;
   font-size: 16px;
+  border-radius: 10px;
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@@ -403,6 +466,7 @@ header h1 {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
